[gd_scene load_steps=2 format=3 uid="uid://l3dxl6ldktn"]

[ext_resource type="Script" path="res://scenes/ui/action_menu.gd" id="1_y0jyg"]

[node name="ActionMenu" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
script = ExtResource("1_y0jyg")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Button1" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Action"

[node name="Button2" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Action"

[node name="Button3" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Action"

[node name="Button4" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Action"

[connection signal="pressed" from="PanelContainer/HBoxContainer/Button1" to="." method="button_pressed" binds= [0]]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Button2" to="." method="button_pressed" binds= [1]]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Button3" to="." method="button_pressed" binds= [2]]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Button4" to="." method="button_pressed" binds= [3]]
